--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -201,7 +201,7 @@
   "openUrl": "URL",
   "openUrlDesc": "https://server/pfad/datei.kdbx, oder einfach datei.kdbx",
   "openUser": "Benutzername",
-  "openUserDesc": "WebDAV Server-Benutzer (falls erforderlich)",
+  "openUserDesc": "WebDAV Server Benutzername (falls erforderlich)",
   "openUserPlaceholder": "kein Benutzername",
   "openPass": "Passwort",
   "openPassDesc": "WebDAV Server-Passwort (nicht das KDBX-Datei-Passwort)",
@@ -348,11 +348,7 @@
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenLocale": "Sprache",
-  "setGenLocImprove": "die App in Ihre Sprache übersetzen",
   "setGenLocOther": "Andere Sprachen sind als Plugins verfügbar.",
-  "setGenLocMsg": "Helfen Sie mit, KeeWeb zu übersetzen",
-  "setGenLocMsgBody": "Sie möchten KeeWeb in Ihrer Sprache benutzen? Helfen Sie uns bitte bei der Übersetzung.",
-  "setGenLocMsgLink": "App übersetzen",
   "setGenFontSize": "Schriftgröße",
   "setGenFontSizeNormal": "Standard",
   "setGenFontSizeLarge": "Groß",
@@ -495,6 +491,11 @@
   "setPlInstallUrlTitle": "Plugin von einer URL hinzufügen",
   "setPlInstallUrlDesc": "Wenn das Plugin nicht in der Galerie verfügbar ist, können Sie es manuell von einer URL installieren",
   "setPlOfficial": "Offizielles KeeWeb-Plugin",
+  "setPlSearch": "Nach Plugins suchen",
+  "setPlDevelop": "Eigene Plugins entwickeln?",
+  "setPlDevelopStart": "Hier entlang",
+  "setPlTranslate": "Oder {}",
+  "setPlTranslateLink": "übersetzen Sie die App in Ihre Sprache",
   "setAboutTitle": "Über",
   "setAboutBuilt": "Diese App wurde mit den folgenden Werkzeugen erstellt",
   "setAboutLic": "Lizenz",
