--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -348,11 +348,7 @@
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
   "setGenLocale": "Idioma",
-  "setGenLocImprove": "traduce esta aplicación a tu idioma",
   "setGenLocOther": "otros idiomas están disponibles como componentes",
-  "setGenLocMsg": "Ayuda a traducir KeeWeb",
-  "setGenLocMsgBody": "Si deseas ver KeeWeb en tu idioma, por favor, ayúdanos con la traducción.",
-  "setGenLocMsgLink": "Traducir esta aplicación",
   "setGenFontSize": "Tamaño letra",
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Grande",
@@ -496,6 +492,10 @@
   "setPlInstallUrlDesc": "Si el componente no está en la galería, puedes instalarlo manualmente desde una URL",
   "setPlOfficial": "Componente Oficial de KeeWeb",
   "setPlSearch": "Buscar componentes",
+  "setPlDevelop": "¿Quieres desarrollar tus propios componentes?",
+  "setPlDevelopStart": "Empieza aquí",
+  "setPlTranslate": "O puedes {}",
+  "setPlTranslateLink": "traducir la aplicación a tu idioma",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
