--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -348,11 +348,7 @@
   "setGenThemeSd": "Solaryzowany ciemny",
   "setGenThemeSl": "Solaryzowany jasny",
   "setGenLocale": "Język",
-  "setGenLocImprove": "Przetłumacz aplikację na twój język",
   "setGenLocOther": "inne języki są dostępne jako wtyczki",
-  "setGenLocMsg": "Pomóż w tłumaczeniu KeeWeb",
-  "setGenLocMsgBody": "Jeżeli chciałbyś zobaczyć KeeWeb w twoim języku, proszę nam pomóc w tłumaczeniu.",
-  "setGenLocMsgLink": "Przetłumacz aplikację",
   "setGenFontSize": "Rozmiar fontu",
   "setGenFontSizeNormal": "Normalny",
   "setGenFontSizeLarge": "Duży",
@@ -496,6 +492,10 @@
   "setPlInstallUrlDesc": "Jeżeli w galerii nie ma wtyczki, możesz ją zainstalować ręcznie z URL",
   "setPlOfficial": "Oficjalna wtyczka KeeWeb",
   "setPlSearch": "Szukaj wtyczek",
+  "setPlDevelop": "Chcesz programować własne wtyczki?",
+  "setPlDevelopStart": "Zacznij tutaj",
+  "setPlTranslate": "Albo możesz {}",
+  "setPlTranslateLink": "przetłumaczyć tę aplikację na swój język",
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
