--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -59,6 +59,7 @@
   "noTitle": "нет названия",
   "or": "или",
   "history": "история",
+  "template": "шаблон",
   "notImplemented": "Не реализовано",
   "saveChanges": "Сохранить изменения",
   "discardChanges": "Отменить изменения",
@@ -66,6 +67,7 @@
   "shortcuts": "Горячие клавиши",
   "help": "Помощь",
   "settings": "Настройки",
+  "plugins": "Плагины",
   "cache": "кэш",
   "file": "Файл",
   "webdav": "WebDAV",
@@ -150,6 +152,8 @@
   "listNoWebsite": "нет сайта",
   "listNoUser": "нет пользователя",
   "listNoAttachments": "нет вложений",
+  "listAddTemplateHeader": "Шаблоны",
+  "listAddTemplateBody2": "Вы всегда можете найти свои шаблоны в группе {}.",
   "searchAddNew": "Добавить новый",
   "searchSort": "Сортировать",
   "searchCreated": "Создан",
@@ -254,6 +258,7 @@
   "detClone": "Сделать копию",
   "detClonedName": "Копировать",
   "detAutoType": "Авто-тип",
+  "detAutoTypeSettings": "Настройка авто-ввода",
   "detAutoTypeEnabled": "Включение авто-типа для данной записи",
   "detAutoTypeSequence": "Нажатий клавиш",
   "detAutoTypeInput": "Ввод",
@@ -305,6 +310,7 @@
   "appSaveErrorBodyMul": "Ошибка авто-сохранения файлов:",
   "appSettingsError": "Ошибка загрузки приложения",
   "appSettingsErrorBody": "Была ошибка при загрузке настроек приложения. Пожалуйста, проверьте URL приложения или обратитесь к администратору.",
+  "appNotSupportedError": "Ваш браузер не поддерживается.",
   "appTabWarn": "Слишком много вкладок",
   "appTabWarnBody": "Нельзя использовать KeeWeb в двух вкладках браузера одновременно. Пожалуйста, закройте эту вкладку.",
   "setGenTitle": "Общие настройки",
@@ -341,14 +347,15 @@
   "setGenThemeSd": "Выцветшая тёмная",
   "setGenThemeSl": "Выцветшая светлая",
   "setGenLocale": "Язык",
-  "setGenLocImprove": "перевести приложение на свой язык",
-  "setGenLocMsg": "Помочь перевести KeeWeb",
-  "setGenLocMsgBody": "Если вы хотите видеть KeeWeb на вашем языке, пожалуйста, помогите нам с переводом.",
-  "setGenLocMsgLink": "Перевести приложение",
+  "setGenLocOther": "Другие языки доступны как плагины",
   "setGenFontSize": "Размер шрифта",
   "setGenFontSizeNormal": "Нормальный",
   "setGenFontSizeLarge": "Большой",
   "setGenFontSizeLargest": "Огромный",
+  "setGenTitlebarStyle": "Стиль окна (требуется перезагрузка)",
+  "setGenTitlebarStyleDefault": "По умолчанию",
+  "setGenTitlebarStyleHidden": "Пользовательский заголовок",
+  "setGenTitlebarStyleHiddenInset": "Пользовательский заголовок, перетаскиваемое окно",
   "setGenShowSubgroups": "Показать записи из всех подгрупп",
   "setGenTableView": "Просмотр списка записей в виде таблицы",
   "setGenColorfulIcons": "Цветной список пользовательских иконок",
@@ -371,6 +378,7 @@
   "setGenMinInstead": "Минимизировать приложение вместо закрытия",
   "setGenLockMinimize": "Авто блокировка по минимизации",
   "setGenLockCopy": "Блокировать приложение после копирования пароля",
+  "setGenLockAutoType": "Автоматическая блокировка при авто-вводе",
   "setGenStorage": "Хранилище",
   "setGenShowAdvanced": "Показать дополнительные настройки (эти настройки могут быть опасны)",
   "setGenDevTools": "Средства разработки",
@@ -459,6 +467,31 @@
   "setShCopyUrlGlobal": "копия веб-сайта (если приложение работает в фоновом режиме)",
   "setShAutoTypeGlobal": "авто-ввод (при свёрнутой программе)",
   "setShLock": "блокировать базу данных",
+  "setPlInstallTitle": "Установить новые плагины",
+  "setPlInstallLabel": "URL адрес плагина",
+  "setPlInstallBtn": "Установить",
+  "setPlInstallBtnProgress": "Установка",
+  "setPlUninstallBtn": "Удалить",
+  "setPlDisableBtn": "Отключить",
+  "setPlEnableBtn": "Включить",
+  "setPlUpdateBtn": "Обновить",
+  "setPlLocaleBtn": "Применить язык",
+  "setPlThemeBtn": "Применить тему",
+  "setPlJs": "код",
+  "setPlCss": "стили",
+  "setPlLoc": "язык",
+  "setPlCreatedBy": "Создано {}",
+  "setPlLastUpdate": "Последняя проверка обновлений",
+  "setPlLoadError": "ошибка при загрузке плагина",
+  "setPlGalleryLoading": "Загрузка плагинов, пожалуйста подождите немного",
+  "setPlGalleryLoadError": "Ошибка при загрузке плагинов",
+  "setPlInstallUrlTitle": "Добавить плагин по ссылке",
+  "setPlOfficial": "Официальный плагин KeeWeb",
+  "setPlSearch": "Поиск плагинов",
+  "setPlDevelop": "Хотите сделать свои собственные плагины?",
+  "setPlDevelopStart": "Начать здесь",
+  "setPlTranslate": "Или вы можете {}",
+  "setPlTranslateLink": "Перевести приложение на ваш язык",
   "setAboutTitle": "О KeeWeb",
   "setAboutBuilt": "Это приложение построено с этими удивительными инструментами",
   "setAboutLic": "Лицензия",
@@ -501,6 +534,7 @@
   "dropboxLinkApp": "Папка приложения (приложения KeeWeb)",
   "dropboxLinkFull": "Полный Dropbox или любая папка",
   "dropboxLinkCustom": "Своё Dropbox-приложение",
+  "webdavSaveMethod": "Метод сохранения",
   "launcherSave": "Сохранение пароля базы данных",
   "launcherFileFilter": "KeePass файлы",
   "authPopupRequired": "Всплывающие окна заблокированы",
