--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -59,6 +59,7 @@
   "noTitle": "aucun titre",
   "or": "ou",
   "history": "historique",
+  "template": "template",
   "notImplemented": "Non Implémenté",
   "saveChanges": "Sauvegarder les changements",
   "discardChanges": "Annuler les changements",
@@ -66,6 +67,7 @@
   "shortcuts": "Raccourcis",
   "help": "Aide",
   "settings": "Paramètres",
+  "plugins": "Plugins",
   "cache": "cache",
   "file": "fichier",
   "webdav": "WebDAV",
@@ -150,6 +152,9 @@
   "listNoWebsite": "aucun site web",
   "listNoUser": "aucun utilisateur",
   "listNoAttachments": "aucune pièce-jointe",
+  "listAddTemplateHeader": "Templates",
+  "listAddTemplateBody1": "Les templates vous permettent de créer des nouvelles entrées en un click. Ajouter quelque chose à l'entrée du template et ensuite cliquer de nouveau sur {} pour utiliser ce template.",
+  "listAddTemplateBody2": "Vous pouvez toujours retrouver vos templates dans le groupe {}.",
   "searchAddNew": "Ajouter Nouveau",
   "searchSort": "Trier",
   "searchCreated": "Créé",
@@ -254,6 +259,7 @@
   "detClone": "Dupliquer",
   "detClonedName": "Copier",
   "detAutoType": "Saisie auto",
+  "detAutoTypeSettings": "Paramètres saisie auto",
   "detAutoTypeEnabled": "Activer la saisie automatique pour cette entrée",
   "detAutoTypeSequence": "Frappes",
   "detAutoTypeInput": "Entrée",
@@ -305,6 +311,7 @@
   "appSaveErrorBodyMul": "Echec sauvegarde auto des fichiers",
   "appSettingsError": "Erreur lancement appli",
   "appSettingsErrorBody": "Il y a eu une erreur au chargement des paramètres. Merci de revérifier l'URL de l'application ou contacter votre administrateur.",
+  "appNotSupportedError": "Votre navigateur n'est pas supporté.",
   "appTabWarn": "Trop d'onglets",
   "appTabWarnBody": "KeeWeb ne peut être utilisé dans 2 onglets de navigateurs simultanément. Fermer cet onglet, s'il vous plait.",
   "setGenTitle": "Paramètres",
@@ -341,10 +348,15 @@
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenLocale": "Langue",
+  "setGenLocOther": "d'autres langues sont disponibles en tant que plugins",
   "setGenFontSize": "Taille de police",
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Large",
   "setGenFontSizeLargest": "Très large",
+  "setGenTitlebarStyle": "Style de fenêtres (redémarrage requis)",
+  "setGenTitlebarStyleDefault": "Par défaut",
+  "setGenTitlebarStyleHidden": "Titre modifié",
+  "setGenTitlebarStyleHiddenInset": "Titre modifié, fénêtre déplaçable",
   "setGenShowSubgroups": "Afficher les entrées de tous les sous groupes",
   "setGenTableView": "Voir les entrées en liste",
   "setGenColorfulIcons": "Icônes en couleur dans la liste",
@@ -367,6 +379,7 @@
   "setGenMinInstead": "Réduire l'application au lieu de fermer",
   "setGenLockMinimize": "Verrouiller après réduction",
   "setGenLockCopy": "Verrouiller après copie de mot de passe",
+  "setGenLockAutoType": "Verrouillage auto sur saisie auto",
   "setGenStorage": "Stockage",
   "setGenShowAdvanced": "Afficher les paramètres avancés",
   "setGenDevTools": "Afficher les outils de développement",
@@ -455,6 +468,29 @@
   "setShCopyUrlGlobal": "copier le site (quand l'appli est en arrière-plan)",
   "setShAutoTypeGlobal": "saisie automatique (quand l'appli est en arrière-plan)",
   "setShLock": "verrouiller la base",
+  "setPlInstallTitle": "Installer de nouveaux plugins",
+  "setPlInstallDesc": "Les plugins de KeeWeb ajoutent des fonctionnalités, thèmes et langues à KeeWeb. Les plugins sont lancés avec les même privilèges que KeeWeb : ils peuvent accéder et gérer tous vos mots de passe. Ne jamais installer de plugins dont vous n'avez pas confiance.",
+  "setPlInstallLabel": "URL du plugin",
+  "setPlInstallBtn": "Installer",
+  "setPlInstallBtnProgress": "Installation",
+  "setPlUninstallBtn": "Désintaller",
+  "setPlDisableBtn": "Désactiver",
+  "setPlEnableBtn": "Activer",
+  "setPlUpdateBtn": "Mettre à jour",
+  "setPlLocaleBtn": "Changer pour cette langue",
+  "setPlThemeBtn": "Changer pour ce thème",
+  "setPlJs": "code",
+  "setPlCss": "styles",
+  "setPlLoc": "langue",
+  "setPlCreatedBy": "Créé par {}",
+  "setPlLoadTime": "{} pour charger",
+  "setPlLoadError": "erreur au chargement du plugin",
+  "setPlGalleryLoading": "Chargement des plugins, patientez un instant",
+  "setPlGalleryLoadError": "erreur au chargement des plugins",
+  "setPlInstallUrlTitle": "Ajout plugin à partir de l'URL",
+  "setPlDevelopStart": "commencez ici",
+  "setPlTranslate": "Ou vous pouvez {}",
+  "setPlTranslateLink": "traduire l'aplli  dans votre langue",
   "setAboutTitle": "A propos",
   "setAboutBuilt": "Cette appli est construite avec ces outils géniaux",
   "setAboutLic": "Licence",
@@ -497,6 +533,7 @@
   "dropboxLinkApp": "Dossier de l'appli (Apps/KeeWeb)",
   "dropboxLinkFull": "Tout Dropbox ou n'importe quel dossier",
   "dropboxLinkCustom": "Votre appli Dropbox",
+  "webdavSavePut": "Ecraser le fichier kdbx avec PUT",
   "launcherSave": "Sauvegarder base des mots de passe",
   "launcherFileFilter": "Fichiers Keepass",
   "authPopupRequired": "Les pop-up sont blockés",
