--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -109,10 +109,10 @@
   "genPresetHash128": "hash a 128-bit",
   "genPresetHash256": "hash a 256-bit",
   "grpTitle": "Gruppo",
-  "grpSearch": "Abilita la ricerca degli elementi in questo gruppo",
-  "grpAutoType": "Abilita auto-type",
-  "grpAutoTypeSeq": "Sequenza auto-type",
-  "grpAutoTypeSeqDefault": "Usa la sequenza di auto-type automatica",
+  "grpSearch": "Abilita la ricerca delle voci in questo gruppo",
+  "grpAutoType": "Abilita scrittura automatica",
+  "grpAutoTypeSeq": "Sequenza di scrittura automatica",
+  "grpAutoTypeSeqDefault": "Usa la sequenza di scrittura automatica di default",
   "grpTrash": "Cancella il gruppo con tutte le voci",
   "tagTitle": "Tag",
   "tagTrash": "Rimuovi il tag da tutte le voci",
@@ -123,11 +123,11 @@
   "tagExistsBody": "Un tag con questo nome è già esistente. Per favore sceglierne un altro.",
   "tagBadName": "Nome non valido",
   "tagBadNameBody": "Il nome di un tag non può contenere i caratteri {}. Per favore rimuoverli.",
-  "genPsTitle": "Generatore di template",
-  "genPsCreate": "Nuvo template",
-  "genPsDelete": "Cancella template",
-  "genPsNew": "template",
-  "genPsEnabled": "Mostra nella lista dei template",
+  "genPsTitle": "Modelli del generatore",
+  "genPsCreate": "Nuovo modello",
+  "genPsDelete": "Cancella modello",
+  "genPsNew": "modello",
+  "genPsEnabled": "Mostra nella lista dei modelli",
   "genPsDefault": "Selezionato come predefinito",
   "genPsDefaultLength": "Lunghezza di default",
   "genPsUpper": "Lettere latine maiuscole",
@@ -141,11 +141,11 @@
   "genPsExample": "Esempio di password generata",
   "keyChangeTitleRemote": "Chiave Principale Modificata",
   "keyChangeMessageRemote": "La chiave principale è stata cambiata per questo database. Per favore inserire una nuova chiave",
-  "keyChangeTitleExpired": "Chiave principale scaduta",
+  "keyChangeTitleExpired": "Chiave Principale Scaduta",
   "keyChangeMessageExpired": "La chiave principale per questo database è scaduta. Per favore inserire una nuova chiave",
   "keyChangeRepeatPassword": "Password, di nuovo",
   "iconFavTitle": "Scarica ed usa la favicon dal sito",
-  "iconSelCustom": "Seleziona un'icon personalizzata",
+  "iconSelCustom": "Seleziona un'icona personalizzata",
   "listEmptyTitle": "Vuoto",
   "listEmptyAdd": "aggiungi col pulsante {} sopra",
   "listGroup": "Gruppo",
@@ -492,6 +492,10 @@
   "setPlInstallUrlDesc": "Se il plugin non è nella galleria, lo puoi installare manualmente dall'URL",
   "setPlOfficial": "Plugin KeeWeb ufficiale",
   "setPlSearch": "Cerca plugin",
+  "setPlDevelop": "Vuoi sviluppare i tuoi plugin?",
+  "setPlDevelopStart": "Inizia qui",
+  "setPlTranslate": "Oppure puoi {}",
+  "setPlTranslateLink": "tradurre l'applicazione nella tua lingua",
   "setAboutTitle": "Info su",
   "setAboutBuilt": "Questa applicazione è fatta con questi magnifici strumenti",
   "setAboutLic": "Licenza",
