--- a/docs/translations/ko/ko.json
+++ b/docs/translations/ko/ko.json
@@ -492,6 +492,10 @@
   "setPlInstallUrlDesc": "플러그인이 갤러리에 없으면 URL에서 수동으로 설치할 수 있습니다.",
   "setPlOfficial": "공식 KeeWeb 플러그인",
   "setPlSearch": "플러그인 검색",
+  "setPlDevelop": "자신의 플러그인을 개발하고 싶습니까?",
+  "setPlDevelopStart": "여기에서 시작하십시오.",
+  "setPlTranslate": "또는 {} 할 수 있습니다.",
+  "setPlTranslateLink": "앱을 귀하의 언어로 번역하십시오.",
   "setAboutTitle": "대하여",
   "setAboutBuilt": "이 앱은이 멋진 도구로 제작되었습니다.",
   "setAboutLic": "저작권",
