--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -109,7 +109,7 @@
   "genPresetHash128": "128位散列",
   "genPresetHash256": "256位散列",
   "grpTitle": "分组",
-  "grpSearch": "允许搜索当前分组下的记录",
+  "grpSearch": "允许搜索此分组下的记录",
   "grpAutoType": "启用自动键入",
   "grpAutoTypeSeq": "自动键入序列",
   "grpAutoTypeSeqDefault": "使用默认的自动键入序列",
@@ -122,7 +122,7 @@
   "tagExists": "标签已存在",
   "tagExistsBody": "该标签名已存在, 请使用其他名称。",
   "tagBadName": "非法名称",
-  "tagBadNameBody": "标签名称中不能包含字符\"{}\"",
+  "tagBadNameBody": "标签名称中不能包含字符\"{}\"。请删除该字符。",
   "genPsTitle": "生成器预设",
   "genPsCreate": "新预设",
   "genPsDelete": "删除预设",
@@ -469,6 +469,7 @@
   "setShAutoTypeGlobal": "自动输入 (当应用在后台运行时)",
   "setShLock": "锁定数据库",
   "setPlInstallTitle": "安装新插件",
+  "setPlInstallDesc": "KeeWeb 插件能够添加功能、主题与语言至 KeeWeb 。插件以与 KeeWeb 同样的等级运行，它们能够读取和管理您的全部密码。永远不要安装不信任的插件。",
   "setPlInstallLabel": "插件 URL",
   "setPlInstallBtn": "安装",
   "setPlInstallBtnProgress": "安装中",
@@ -478,9 +479,11 @@
   "setPlUpdateBtn": "更新",
   "setPlLocaleBtn": "切换到此语言",
   "setPlThemeBtn": "切换到此主题",
+  "setPlJs": "代码",
   "setPlCss": "样式",
   "setPlLoc": "语言",
   "setPlCreatedBy": "由 {} 创建",
+  "setPlLoadTime": "花费 {} 加载",
   "setPlLastUpdate": "上次检查更新",
   "setPlLoadError": "载入插件时发生错误",
   "setPlGalleryLoading": "载入插件中，请稍候",
@@ -489,6 +492,10 @@
   "setPlInstallUrlDesc": "如果插件不在插件库中，您可以手动从 URL 中添加插件",
   "setPlOfficial": "官方 KeeWeb 插件",
   "setPlSearch": "搜索插件",
+  "setPlDevelop": "想开发您自己的插件？",
+  "setPlDevelopStart": "从这里开始",
+  "setPlTranslate": "或者您也可以{}",
+  "setPlTranslateLink": "将此应用翻译为您的语言",
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
