--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -496,6 +496,7 @@
   "setPlDevelopStart": "Empieza aquí",
   "setPlTranslate": "O puedes {}",
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
+  "setPlAutoUpdate": "Actualizar automáticamente",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
