--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -67,7 +67,7 @@
   "shortcuts": "Raccourcis",
   "help": "Aide",
   "settings": "Paramètres",
-  "plugins": "Plugins",
+  "plugins": "Modules",
   "cache": "cache",
   "file": "fichier",
   "webdav": "WebDAV",
@@ -348,7 +348,7 @@
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenLocale": "Langue",
-  "setGenLocOther": "d'autres langues sont disponibles en tant que plugins",
+  "setGenLocOther": "d'autres langues sont disponibles en tant que modules",
   "setGenFontSize": "Taille de police",
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Large",
@@ -468,9 +468,9 @@
   "setShCopyUrlGlobal": "copier le site (quand l'appli est en arrière-plan)",
   "setShAutoTypeGlobal": "saisie automatique (quand l'appli est en arrière-plan)",
   "setShLock": "verrouiller la base",
-  "setPlInstallTitle": "Installer de nouveaux plugins",
-  "setPlInstallDesc": "Les plugins de KeeWeb ajoutent des fonctionnalités, thèmes et langues à KeeWeb. Les plugins sont lancés avec les même privilèges que KeeWeb : ils peuvent accéder et gérer tous vos mots de passe. Ne jamais installer de plugins dont vous n'avez pas confiance.",
-  "setPlInstallLabel": "URL du plugin",
+  "setPlInstallTitle": "Installer de nouveaux modules",
+  "setPlInstallDesc": "Les modules de KeeWeb ajoutent des fonctionnalités, thèmes et langues à KeeWeb. Les modules sont lancés avec les même privilèges que KeeWeb : ils peuvent accéder et gérer tous vos mots de passe. Ne jamais installer de modules que vous n'avez pas confiance.",
+  "setPlInstallLabel": "URL du module",
   "setPlInstallBtn": "Installer",
   "setPlInstallBtnProgress": "Installation",
   "setPlUninstallBtn": "Désintaller",
@@ -484,13 +484,19 @@
   "setPlLoc": "langue",
   "setPlCreatedBy": "Créé par {}",
   "setPlLoadTime": "{} pour charger",
-  "setPlLoadError": "erreur au chargement du plugin",
-  "setPlGalleryLoading": "Chargement des plugins, patientez un instant",
-  "setPlGalleryLoadError": "erreur au chargement des plugins",
-  "setPlInstallUrlTitle": "Ajout plugin à partir de l'URL",
+  "setPlLastUpdate": "Dernière vérification des mises à jour",
+  "setPlLoadError": "erreur au chargement du module",
+  "setPlGalleryLoading": "Chargement des modules, patientez un instant",
+  "setPlGalleryLoadError": "erreur au chargement des modules",
+  "setPlInstallUrlTitle": "Ajouter un module de l'URL",
+  "setPlInstallUrlDesc": "Si le module n'est pas dans la galerie, vous pouvez l'installer manuellement de l'URL",
+  "setPlOfficial": "Module officiel KeeWeb",
+  "setPlSearch": "Rechercher des modules",
+  "setPlDevelop": "Vous voulez développer vos propres modules ?",
   "setPlDevelopStart": "commencez ici",
   "setPlTranslate": "Ou vous pouvez {}",
   "setPlTranslateLink": "traduire l'aplli  dans votre langue",
+  "setPlAutoUpdate": "Mise à jour automatique",
   "setAboutTitle": "A propos",
   "setAboutBuilt": "Cette appli est construite avec ces outils géniaux",
   "setAboutLic": "Licence",
@@ -533,6 +539,8 @@
   "dropboxLinkApp": "Dossier de l'appli (Apps/KeeWeb)",
   "dropboxLinkFull": "Tout Dropbox ou n'importe quel dossier",
   "dropboxLinkCustom": "Votre appli Dropbox",
+  "webdavSaveMethod": "Méthode de sauvegarde",
+  "webdavSaveMove": "Uploader un fichier temporaire et le déplacer",
   "webdavSavePut": "Ecraser le fichier kdbx avec PUT",
   "launcherSave": "Sauvegarder base des mots de passe",
   "launcherFileFilter": "Fichiers Keepass",
