--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -496,6 +496,7 @@
   "setPlDevelopStart": "Zacznij tutaj",
   "setPlTranslate": "Albo możesz {}",
   "setPlTranslateLink": "przetłumaczyć tę aplikację na swój język",
+  "setPlAutoUpdate": "Aktualizuj automatycznie",
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
