--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -496,6 +496,7 @@
   "setPlDevelopStart": "Hier entlang",
   "setPlTranslate": "Oder {}",
   "setPlTranslateLink": "übersetzen Sie die App in Ihre Sprache",
+  "setPlAutoUpdate": "Automatisch aktualisieren",
   "setAboutTitle": "Über",
   "setAboutBuilt": "Diese App wurde mit den folgenden Werkzeugen erstellt",
   "setAboutLic": "Lizenz",
