--- a/docs/translations/ko/ko.json
+++ b/docs/translations/ko/ko.json
@@ -71,9 +71,9 @@
   "cache": "캐시",
   "file": "파일",
   "webdav": "WebDAV",
-  "dropbox": "드롭박스",
-  "gdrive": "구글 드라이브",
-  "onedrive": "원드라이브",
+  "dropbox": "Dropbox",
+  "gdrive": "Google Drive",
+  "onedrive": "OneDrive",
   "menuAllItems": "모든 항목",
   "menuColors": "색상",
   "menuTrash": "휴지통",
@@ -87,7 +87,7 @@
   "menuItemCollapsed": "더블 클릭하여 확장",
   "alertYes": "예",
   "alertNo": "아니오",
-  "alertOk": "승인",
+  "alertOk": "확인",
   "alertCancel": "취소",
   "alertSignIn": "로그인",
   "alertCopy": "복사",
@@ -435,7 +435,7 @@
   "setFileGenKeyFile": "새 키 파일 생성",
   "setFileDontUseKeyFile": "키 파일을 사용하지 마십시오",
   "setFileEmptyPass": "비어있는 비밀번호",
-  "setFileEmptyPassBody": "비어있는 비밀번호로 데이터베이스를 저장하면 완전히 보호되지 않습니다. 진짜로 저장하시겠습니까?",
+  "setFileEmptyPassBody": "비어있는 비밀번호로 데이터베이스를 저장하면 완전히 보호되지 않습니다. 정말 저장하시겠습니까?",
   "setFileSaveError": "저장 오류",
   "setFileSaveErrorBody": "파일 저장 중 오류",
   "setFileAlreadyExists": "이미 존재 함",
@@ -496,8 +496,9 @@
   "setPlDevelopStart": "여기에서 시작하십시오.",
   "setPlTranslate": "또는 {} 할 수 있습니다.",
   "setPlTranslateLink": "앱을 귀하의 언어로 번역하십시오.",
+  "setPlAutoUpdate": "자동으로 업데이트",
   "setAboutTitle": "대하여",
-  "setAboutBuilt": "이 앱은이 멋진 도구로 제작되었습니다.",
+  "setAboutBuilt": "앱 제작에 도움을 준 멋진 도구들",
   "setAboutLic": "저작권",
   "setAboutLicComment": "앱 자체 및 퍼블릭 도메인에 포함되지 않은 모든 구성 요소는 MIT 라이센스에 따라 라이센스가 부여됩니다.",
   "setAboutFirst": "{}이(가) 만든 오픈 소스 앱입니다.",
